--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -3,7 +3,9 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TextActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TextActivity"
+    android:id="@+id/smsView"
+    android:clickable="true">
 
     <EditText
         android:layout_width="wrap_content"
@@ -11,9 +13,10 @@
         android:inputType="number"
         android:ems="10"
         android:id="@+id/nuberText"
-        android:layout_centerVertical="true"
+        android:hint="Phone Number"
+        android:layout_below="@+id/textingView"
         android:layout_centerHorizontal="true"
-        android:hint="Phone Number" />
+        android:layout_marginTop="77dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,10 +30,20 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Say &quot;Hello&quot;"
+        android:text="Send Message"
         android:id="@+id/textingButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="32dp"
         android:hint="Text" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/smsEdit"
+        android:hint="Enter Message"
+        android:layout_centerVertical="true"
+        android:layout_alignRight="@+id/textingButton"
+        android:layout_alignEnd="@+id/textingButton" />
+
 </RelativeLayout>
