--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -46,4 +46,14 @@
         android:layout_alignRight="@+id/textingButton"
         android:layout_alignEnd="@+id/textingButton" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Brandon Jolley, Easton Madsen, Jared Kerr, Mckay Ririe, Mark Manzo"
+        android:id="@+id/textView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="11dp" />
+
 </RelativeLayout>
