--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -49,7 +49,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Brandon Jolley, Easton Madsen, Jared Kerr, Mckay Ririe, Mark Manzo"
+        android:text="Brandon Jolley, Easton Madsen, Jared Kerr, Mckay Ririe, Mark Manzo test"
         android:id="@+id/textView"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
